navbar fix right align list

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 #listStyle{
-  margin-left:50%;
+  margin-right:2%;
 }
 
 .navbar {
